src/snapshots/choochoo__render__tests__context_block.snap
---
source: src/render.rs
expression: render_context_block(&t).unwrap()
---
<!-- choochoo:context:start -->
## PR Train Context

Split for reviewability.

Start at #10.
<!-- choochoo:context:end -->
