src/snapshots/choochoo__render__tests__table_with_titles.snap
---
source: src/render.rs
expression: "render_table(&t, Some(\"a\"))"
---
| # | Title | PR |   |
|---|-------|----|---|
| 1 | Refactor widget store | #10 | **this PR** |
| 2 | `b` | #11 |  |
